2005-01-20 Mariusz Woloszyn
	* ptpcam.c: fixed mmap() return value comparision, thx to Pallab Basu
2005-01-10 Mariusz Woloszyn
	* ptp.h, ptp.c: added Nikon properties reported by Steve Harris
2004-07-28 Mariusz Woloszyn
	* README: minor changes, updated the copyright notice;
	* configure.in: changed the version to 1.0.1 and updated the library
			version;
	* ptp.c: - LICENSE CHANGED TO GPL, 
		 - changed behavior of ptp_usb_getdata(), if *data is not
		   NULL no memory allocation is performed,
		 - ptp_perror(), ptp_get_operation_name,
		   ptp_get_property_name added/updated to return proprietary
		   extension data;
	* ptp.h: - LICENSE CHANGED TO GPL,
		 - added ptp_get_operation_name();, ptp_get_property_name();
	* ptpcam.c: updated the copyright notice, introduced new
		    capabilities of: listing operations supported, listing
		    files, downloading files and displaying camera info;
		    added interrupt endpoint reading function, removed dead
		    code, removed get_property_description();
2004-07-16 Mariusz Woloszyn
	* ptp.h, ptpcam.c: added NIKON extension code and clear halt fixup
	  by Corey Manders
	* m4/byteorder.m4, stdint.m4: Added quoting for Automake >= 1.8
	* config.h.in: removed
2003-12-18 Mariusz Woloszyn
	* ptp.c, ptp-h.c, ptp-pack.c: added Canon specific PTP extension
	  code by Nikolai Kopanygin
2003-12-17 Mariusz Woloszyn
	* ptp.c, ptp.h, ptp-pack.c: changed comments from // to /* */
	* ptpcam.c: fixed a bug that caused ptoprties names to not be displayed
	* config.h.in: updated for new autoconf
	* configure.in: changed version numbr to 1.0pre7
2003-12-17 Mariusz Woloszyn
	* ptp.c, ptp.h: fixed ptp_getdevicepropvalue(), thanks to: 
	  Nikolai Kopanygin
2003-07-18 Mariusz Woloszyn
	* ptp.h: changed #include <libptp-endian.h> to
	  #include "libptp-endian.h"
	* m4/byteorder.m4: chabged #include <_stdint.h> to
	  #include "_stdint.h"
2003-06-23 Mariusz Woloszyn
	* configure.in: after reading autoconf documentation (yes, some people