@@ -1,3 +1,7 @@
+2005-02-14 Mariusz Woloszyn
+	* ptpcam.c: fix for canon STALL problem; big thanks come to
+		DervishD (bugs[A@T]dervishd.net) for helping to identify the
+		problem and performing lot of tests.
 2005-01-20 Mariusz Woloszyn
 	* ptpcam.c: fixed mmap() return value comparision, thx to Pallab Basu
 2005-01-10 Mariusz Woloszyn
